<resources>
    <string name="app_name">Meet\'m</string>
    <string name="reload">Reload</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="hint_meeting_name">Meeting name</string>
    <string name="hint_meeting_location">Location</string>
    <string name="hint_meeting_time">Time</string>
    <string name="hint_meeting_date">Date</string>

    <string name="home" translatable="false">Home</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>

    <string name="home_title">It\'s On!</string>
    <string name="home_nothing_found">It seems that you haven\'t crossed paths with anybody yet. Come back later to discover the profiles of those you\'ve come across during the day.</string>

    <string name="sample_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse egestas risus quis sagittis vehicula. Phasellus eu magna massa. Praesent ac urna pulvinar, tempor lacus vel, vehicula sem. Sed congue ex vel elementum tincidunt. In hac habitasse platea dictumst. Vivamus fermentum tincidunt ex ultrices varius.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="not_implemented_yet">This feature isn\'t implemented yet!</string>
    <string name="about_us">About us</string>
    <string name="drawer_open" translatable="false">Drawer open</string>
    <string name="drawer_closed" translatable="false">Drawer closed</string>
    <string name="business_events_title">Business Events Netherlands</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="home_crossed_members">Crossed members</string>
    <string name="map" translatable="false">Map</string>

    <string name="user_follow">follow</string>
    <string name="user_following">following</string>
    <string name="chat_title">Chats</string>
    <string name="chat_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <string name="about_us_text"> At Meet\'m, we believe that everyone deserves to have a chance to meet other freelancers and business owners. Innovation and simplicity makes us happy: our goal is to connect freelancers and business owners with our app. We\'re excited to help you on your journey!</string>
    <string name="location">Location</string>
    <string name="location_title">Update your location</string>
    <string name="about_me">Update about me</string>
    <string name="location_visibility_title">Visible to other users</string>
    <string name="location_search_radius">Search radius</string>
    <string name="notification_crossed_sub">Go to the Meet\'m app to see who you\'ve crossed</string>
    <string name="notification_crossed_title">You\'ve crossed someone</string>
    <string name="message">message</string>
    <string name="your_contacts">Your contacts</string>
    <string name="meet" translatable="false">Meet</string>

    <!-- Error strings -->
    <string name="geofence_not_available" translatable="false">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences" translatable="false">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents" translatable="false">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error" translatable="false">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type" translatable="false">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Arrived</string>
    <string name="unknown_geofence_transition" translatable="false">Unknown Transition</string>

    <string name="geofence_transition_notification_text" translatable="false">
        Click here to send an arrive message
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale" translatable="false">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation" translatable="false">Permission was denied, but is needed for core
        functionality.</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="save_meeting">Save meeting</string>
    <string name="meet_schedule" translatable="false">Meetings</string>
    <string name="meet_add">Add</string>
    <string name="draw_route">Draw route</string>
    <string name="remove_geofence">Remove geofence</string>
    <string name="add_geofence">Add geofence</string>
    <string name="meet_map" translatable="false">Map</string>
    <string name="styling">Map styling</string>
    <string name="map_styling_tile">Satellite style</string>
    <string name="detail_birthday">Birthday</string>
    <string name="detail_phone_number">Phone number</string>
    <string name="detail_email">Email</string>
    <string name="detail_job">Job</string>
    <string name="detail_about_me">About me</string>
    <string name="sample_name" translatable="false">Joey Tribbiani</string>
    <string name="sample_title" translatable="false">GRIP Jaarplandag</string>
    <string name="sample_price" translatable="false">Starts at € 15,00</string>
    <string name="sample_data" translatable="false">vr., dec. 27, 10:00</string>
    <string name="sample_location" translatable="false">VNG • Utrecht</string>
    <string name="sample_meeting_name" translatable="false">Hotel blabla</string>
    <string name="sample_time" translatable="false">14:40</string>
    <string name="profile_picture_update">Profile picture URL</string>
</resources>
