<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/meet_item_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:gravity="start|bottom"
        android:paddingLeft="20dp"
        android:text="@string/sample_meeting_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/meet_item_location"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:gravity="start|top"
        android:paddingLeft="20dp"
        android:text="@string/sample_location"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meet_item_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/meet_item_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:gravity="end|top"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/sample_time"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/meet_item_location"
        app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>